--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,27 @@
     <artifactId>MIDAGEcore</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>cn.powernukkitx</groupId>
             <artifactId>powernukkitx</artifactId>
             <version>1.19.60-r1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.NazarbekAld</groupId>
+            <artifactId>NWTWEngine</artifactId>
+            <version>main-a82bb16c53-1</version>
+        </dependency>
+
     </dependencies>
 
 
